added swagger on docker build
